On tient quelquechose la

--- a/mixtory/app/Resources/views/new_story.html.twig
+++ b/mixtory/app/Resources/views/new_story.html.twig
@@ -3,7 +3,7 @@
 
 
  {% block body %}
-	<form method = "post" action = "{{ path('site_register') }}">
+	<form method = "post" action = "{{ path('site_firstline') }}">
 		<div id = "titre"><input type = "text" name = "titre" placeholder = "Votre titre"/></div>
 		<div id = "texte"><textarea name = "texte" rows = "8" cols = "81" placeholder="Rentrez votre texte"></textarea></div>
 		<div id = "nbr_ligne">Choissisez le nombre de co-auteurs supplémentaires : <input type = "text" name = "nbr_auteurs"/></div>
