--- a/mixtory/app/Resources/views/last_autor.html.twig
+++ b/mixtory/app/Resources/views/last_autor.html.twig
@@ -2,8 +2,9 @@
 
 
  {% block body %}
+	  <h3>{{ titre }}</h3>
 	 <div id="last"><p>Attention vous êtes le dernier auteur !!</p></div>
-	<form method = "post" action = "{{  path('site_envoi') }}">
+	<form method = "post" action = "{{  path('site_envoi', {'id' : id}) }}">
 		<div id = "pre-texte"><article> {{pretexte}}</article></div>
 		<div id = "texte"><textarea name = "texte" rows = "8" cols = "81" placeholder="Rentrez votre texte"></textarea></div>
 		<div id = "adresse-mail"><input type = "text" name = "email" placeholder = "Adresse Mail"/></div>
