--- a/mixtory/app/Resources/views/base.html.twig
+++ b/mixtory/app/Resources/views/base.html.twig
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+		<link href="{{ asset('css/main.css') }}" type="text/css" rel="stylesheet" />
+	{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
+
+</head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
