--- a/mixtory/app/Resources/views/story.html.twig
+++ b/mixtory/app/Resources/views/story.html.twig
@@ -4,4 +4,5 @@
          {% for auteur in auteurs %}
             <p>{{ auteur.texte }}</br></br></p>
          {% endfor %}
+<a href = "{{ path('site_homepage')}}">Retour sur la page d'accueil</a>
 {% endblock %}
