--- a/mixtory/app/Resources/views/new_story.html.twig
+++ b/mixtory/app/Resources/views/new_story.html.twig
@@ -8,7 +8,7 @@
 		<div id = "texte"><textarea name = "texte" rows = "8" cols = "81" placeholder="Rentrez votre texte"></textarea></div>
 		<div id = "nbr_ligne">Choissisez le nombre de co-auteurs supplémentaires : <input type = "text" name = "nbr_auteurs"/></div>
 		<div id = "adresse-mail"><input type = "text" name = "email" placeholder = "Adresse Mail"/></div>
-		<input type= "submit" value = "Go !"/>
+		<input type= "submit" value = "Go !" class="btn-danger"/>
 	</form>
 {% endblock %}
 
