--- a/mixtory/app/Resources/views/last_autor.html.twig
+++ b/mixtory/app/Resources/views/last_autor.html.twig
@@ -4,10 +4,16 @@
  {% block body %}
 	  <h3>{{ titre }}</h3>
 	 <div id="last"><p>Attention vous êtes le dernier auteur !!</p></div>
-	<form method = "post" action = "{{  path('site_envoi', {'id' : id}) }}">
-		<div id = "pre-texte"><article> {{pretexte}}</article></div>
-		<div id = "texte"><textarea name = "texte" rows = "8" cols = "81" placeholder="Rentrez votre texte"></textarea></div>
-		<div id = "adresse-mail"><input type = "text" name = "email" placeholder = "Adresse Mail"/></div>
-		<input type= "submit" value = "Go !"/>
-	</form>
+	 <div class = "form-style-3">
+		 <form method="post" action = "{{ path('site_envoi', {'id' : id}) }}">
+			 <div id="pre-texte"><article>{{pretexte}}</article></div>
+	 	<fieldset><legend>Histoire</legend>
+  			<label for="field2"><span>Texte<span class="required">*</span></span><textarea name= "texte" rows = "8" cols = "81"></textarea>
+		</fieldset>
+		<fieldset><legend>Informations personnelles</legend>
+			<label for="field4"><span>Adresse e-mail</span><input type = "text" name="email">
+			<label><span>&nbsp;</span><input type= "submit" value = "Go !"/>
+		</fieldset>
+		</form>
+	</div>
 {% endblock %}
