--- a/mixtory/app/Resources/views/new_story.html.twig
+++ b/mixtory/app/Resources/views/new_story.html.twig
@@ -3,11 +3,12 @@
 <div class = "form-style-3">
 	<form method = "post" action = "{{ path('site_firstline') }}">
 		<fieldset><legend>Histoire</legend>
-			<label for="field1"><span>Titre</span><input type = "text" name = "titre">			  <label for="field2"><span>Texte<span class="required">*</span></span><textarea name = "texte" rows = "8" cols = "81"></textarea>
+			<label for="field1"><span>Titre :</span><input type = "text" name = "titre">
+			<label for="field2"><span>Texte :<span class="required">*</span></span><textarea name = "texte" rows = "8" cols = "81"></textarea>
 			<label for="field3"><span>Choissisez le nombre de co-auteurs supplémentaires :<span class="required">*</span></span><input type = "number" name = "nbr_auteurs"/>
 		</fieldset>
 		<fieldset><legend>Informations personnelles</legend>
-			<label for="field4"><span>Adresse e-mail</span><input type = "text" name = "email">
+			<label for="field4"><span>Adresse e-mail :</span><input type = "text" name = "email">
 				<label><span>&nbsp;</span><input type= "submit" value = "Go !"/>
 		</fieldset>
 	</form>
