--- a/mixtory/web/main.css
+++ b/mixtory/web/main.css
@@ -32,6 +32,7 @@
     position : relative;		
     margin-left:auto;
     margin-right:auto;
+    margin-top : auto;
     max-width: 450px;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
@@ -41,11 +42,10 @@
 }
 .form-style-3 label > span{
     float: left;
-    width: 100px;
-    color: #0199d9;
-    font-weight: bold;
+    width: 450px;
+    color: white;
+    /*font-weight: bold;*/
     font-size: 13px;
-    text-shadow: 1px 1px 1px #fff;
 }
 .form-style-3 fieldset{
     border-radius: 10px;
@@ -54,20 +54,20 @@
     margin: 0px 0px 10px 0px;
     border: 1px solid #FFD2D2;
     padding: 20px;
-    background:  #0199d9;
+    background:  rgba(1, 153, 217, 0.5);
     box-shadow: inset 0px 0px 15px #FFE5E5;
     -moz-box-shadow: inset 0px 0px 15px #FFE5E5;
     -webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
 }
 .form-style-3 fieldset legend{
-    color: #0199d9;
+    color: white;
     border-top: 1px solid #FFD2D2;
     border-left: 1px solid #FFD2D2;
     border-right: 1px solid #FFD2D2;
     border-radius: 5px 5px 0px 0px;
     -webkit-border-radius: 5px 5px 0px 0px;
     -moz-border-radius: 5px 5px 0px 0px;
-    background: #0199d9;
+    background: rgba(1,153,217,0.5);
     padding: 0px 8px 3px 8px;
     box-shadow: -0px -1px 2px #F1F1F1;
     -moz-box-shadow:-0px -1px 2px #F1F1F1;
@@ -94,20 +94,20 @@
     -moz-border-radius: 3px;
     border: 1px solid #FFC2DC;
     outline: none;
-    color: #0199d9;
+    color: white;
     padding: 5px 8px 5px 8px;
     box-shadow: inset 1px 1px 4px #FFD5E7;
     -moz-box-shadow: inset 1px 1px 4px #FFD5E7;
     -webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
-    background: #0199d9;
-    width:50%;
+    background: rgba(1, 153, 217, 0.7);
+    width:75%;
 }
 .form-style-3  input[type=submit],
 .form-style-3  input[type=button]{
     background: #0199d9;
     border: 1px solid #C94A81;
     padding: 5px 15px 5px 15px;
-    color: #0199d9;
+    color: white;
     box-shadow: inset -1px -1px 3px #FF62A7;
     -moz-box-shadow: inset -1px -1px 3px #FF62A7;
     -webkit-box-shadow: inset -1px -1px 3px #FF62A7;
