--- a/mixtory/web/main.css
+++ b/mixtory/web/main.css
@@ -4,8 +4,8 @@
 	padding-left : 0;
 	padding-right : 20px;
 	height: 100%;
-	margin-right : 1%;
-	margin-top : 15%;
+	margin-top:2px;
+
 	
 }
 #head{
@@ -13,7 +13,7 @@
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   width: 100%;
-  height: 2%;
+  height: 100%;
   margin: auto auto;
   padding: 10px;
   overflow: hidden;
@@ -28,6 +28,29 @@
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
 }
+#oldstories{
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  width: 60%;
+  height: auto;
+  position:relative;
+  margin: auto auto auto 0;
+  padding: 20px;
+  overflow: hidden;
+  border: none;
+  font: normal 40px/1 "Times New Roman", Times, serif;
+  color: rgba(255,255,255,1);
+  text-align: center;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: #0199d9;
+  -webkit-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
+  box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
+}
+
+
 .form-style-3{
     position : relative;		
     margin-left:auto;
