--- a/mixtory/app/Resources/views/merci.html.twig
+++ b/mixtory/app/Resources/views/merci.html.twig
@@ -1,4 +1,4 @@
 {%extends 'base.html.twig' %}
 	{% block body %}
-		<p id =	merci>{{ merci }}</p>
+		<p id ="merci">{{ merci }}</p>
 	{% endblock %}
