--- a/mixtory/web/main.css
+++ b/mixtory/web/main.css
@@ -2,12 +2,53 @@
 	position : fixed;
 	float : left;
 	padding-left : 0;
-	padding-right : 20px;
+	padding-right : 0;
 	height: 100%;
 	margin-top:2px;
-
-	
+	width : 20%;
+	border-right:2px solid #0199d9;
 }
+#merci{
+	-webkit-box-sizing: content-box;
+   	-moz-box-sizing: content-box;
+  	box-sizing: content-box;
+    	width: 50%;
+   	height: 50%;
+    	margin-top: 100px;
+	margin-left:auto;
+	margin-right:auto;
+    	padding: 10px;
+    	overflow: hidden;
+    	border: none;
+   	font: normal 30px/1 "Times New Roman", Times, serif;
+  	color: rgba(255,255,255,1);
+   	text-align: center;
+   	-o-text-overflow: ellipsis;
+ 	text-overflow: ellipsis;
+    	background: #0199d9;
+    	-webkit-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
+  	box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color : white;
+}
+li a{
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration : none;
+  font: normal 20px/1 "Times New Roman", Times, serif;
+}
+li a:hover{
+background-color: rgba(1,153,217,0.5);
+}
+
+
+
 #head{
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
@@ -28,18 +69,21 @@
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
 }
+
+
 #oldstories{
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  width: 60%;
+  width: 100%;
   height: auto;
   position:relative;
   margin: auto auto auto 0;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   overflow: hidden;
   border: none;
-  font: normal 40px/1 "Times New Roman", Times, serif;
+  font: normal 30px/1 "Times New Roman", Times, serif;
   color: rgba(255,255,255,1);
   text-align: center;
   -o-text-overflow: ellipsis;
