--- a/mixtory/app/Resources/views/mail.html.twig
+++ b/mixtory/app/Resources/views/mail.html.twig
@@ -1,6 +1,6 @@
 	<p>Merci d'avoir participé à Mixtory ! Coeur sur vous <3</p>
-	<h3>{{ story.titre }}</h3>
-	{% for auteur in auteurs %}
-		<p>{{ auteur.texte }}</br></br></p>
+	<h3>{{ story.title }}</h3>
+	{% for author in authors %}
+		<p>{{ author.text }}</br></br></p>
 	{% endfor %}
 
