--- a/mixtory/app/Resources/views/last_autor.html.twig
+++ b/mixtory/app/Resources/views/last_autor.html.twig
@@ -2,13 +2,13 @@
 
 
  {% block body %}
-	  <h3>{{ titre }}</h3>
-	 <div id="last"><p>Attention vous êtes le dernier auteur !!</p></div>
 	 <div class = "form-style-3">
 		 <form method="post" action = "{{ path('site_envoi', {'id' : id}) }}">
-			 <div id="pre-texte"><article>{{pretexte}}</article></div>
+			 <h3>{{title}}</h3>
+			 <div id="last"><p>Attention vous êtes le dernier auteur !!</p></div>
+			 <div id="pre-text"><article>{{pretext}}</article></div>
 	 	<fieldset><legend>Histoire</legend>
-  			<label for="field2"><span>Texte :<span class="required">*</span></span><textarea name= "texte" rows = "8" cols = "81"></textarea>
+  			<label for="field2"><span>Texte :<span class="required">*</span></span><textarea name= "text" rows = "8" cols = "81"></textarea>
 		</fieldset>
 		<fieldset><legend>Informations personnelles</legend>
 			<label for="field4"><span>Adresse e-mail :</span><input type = "text" name="email">
