css fini background vitefait

--- a/mixtory/app/Resources/views/new_line.html.twig
+++ b/mixtory/app/Resources/views/new_line.html.twig
@@ -1,7 +1,16 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+	<style>
+		{{css}}
+	</style>
+	{{ parent() }}
+{% endblock %}
 
-
- {% block body %}
+{% block body %}
+<style>
+	body{
+	}
+</style>
 	<div class = "form-style-3">
 		<form method="post" action = "{{ path('site_register', {'id' : id}) }}">
 			<h3>{{title}}</h3>
