--- a/mixtory/web/main.css
+++ b/mixtory/web/main.css
@@ -1,3 +1,4 @@
+
 #menu{
 	position : fixed;
 	float : left;
@@ -99,11 +100,11 @@ ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color : white;
+  background-color :  rgba(1,153,217,0.5);
 }
 li a{
   display: block;
-  color: #000;
+  color: white;
   padding: 8px 16px;
   text-decoration : none;
   font: normal 20px/1 "Times New Roman", Times, serif;
@@ -118,13 +119,10 @@ background-color: rgba(1,153,217,0.5);
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  width: 100%;
-  height: 100%;
   margin: auto auto;
-  padding: 10px;
   overflow: hidden;
   border: none;
-  font: normal 40px/1 "Times New Roman", Times, serif;
+  font: normal 35px/1 "Times New Roman", Times, serif;
   color: rgba(255,255,255,1);
   text-align: center;
   -o-text-overflow: ellipsis;
@@ -177,7 +175,7 @@ background-color: rgba(1,153,217,0.5);
     width: 450px;
     color: white;
     /*font-weight: bold;*/
-    font-size: 13px;
+    font-size: 15px;
 }
 .form-style-3 fieldset{
     border-radius: 10px;
@@ -205,7 +203,7 @@ background-color: rgba(1,153,217,0.5);
     -moz-box-shadow:-0px -1px 2px #F1F1F1;
     -webkit-box-shadow:-0px -1px 2px #F1F1F1;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 15px;
 }
 .form-style-3 textarea{
     width:250px;
@@ -231,7 +229,7 @@ background-color: rgba(1,153,217,0.5);
     box-shadow: inset 1px 1px 4px #FFD5E7;
     -moz-box-shadow: inset 1px 1px 4px #FFD5E7;
     -webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
-    background: rgba(1, 153, 217, 0.7);
+    background: rgba(1, 153, 217, 0.5);
     width:75%;
 }
 .form-style-3  input[type=submit],
