--- a/mixtory/web/main.css
+++ b/mixtory/web/main.css
@@ -157,6 +157,29 @@ background-color: rgba(1,153,217,0.5);
   text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
 }
 
+#last p{
+	background: rgba(158, 1, 10, 1);
+	color: white;
+	border: solid black 1px;
+        border-width: 0.1em;
+        border-style: solid;
+        border-color: grey;
+        border-radius: 0.5em;
+        max-height:700px;
+        overflow:auto;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 5px;
+	text-align: center:
+}
+
+#pre-text{
+	color:white;
+	background: rgba(1, 153, 217, 0.3);
+	margin-bottom: 10px;
+	padding-left: 5px;
+}
+
 
 .form-style-3{
     position : relative;		
@@ -208,6 +231,23 @@ background-color: rgba(1,153,217,0.5);
 .form-style-3 textarea{
     width:250px;
     height:100px;
+}
+.form-style-3 h3{
+     border-radius: 3px;
+     -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+     border: 1px solid #FFC2DC;
+     outline: none;
+     color: white;
+     padding: 5px 8px 5px 8px;
+     box-shadow: inset 1px 1px 4px #FFD5E7;
+     -moz-box-shadow: inset 1px 1px 4px #FFD5E7;
+     -webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
+     background: rgba(1, 153, 217, 0.5);
+     width:75%;
+     margin-left:auto;
+     margin-right:auto;
+     text-align: center;
 }
 .form-style-3 input[type=text],
 .form-style-3 input[type=date],
