Revert "par Alex"
This reverts commit 01ffa79f9853979b699ca4598b14ab47e0d3d1fe.

--- a/mixtory/app/Resources/views/new_line.html.twig
+++ b/mixtory/app/Resources/views/new_line.html.twig
@@ -7,6 +7,10 @@
 {% endblock %}
 
 {% block body %}
+<style>
+	body{
+	}
+</style>
 	<div class = "form-style-3">
 		<form method="post" action = "{{ path('site_register', {'id' : id}) }}">
 			<h3>{{title}}</h3>
