--- a/mixtory/app/Resources/views/new_story.html.twig
+++ b/mixtory/app/Resources/views/new_story.html.twig
@@ -5,11 +5,7 @@
 		<fieldset><legend>Histoire</legend>
 			<label for="field1"><span>Titre :</span><input type = "text" name = "title">
 			<label for="field2"><span>Texte :<span class="required">*</span></span><textarea name = "text" rows = "8" cols = "81"></textarea>
-			<label for="field3"><span>Choisissez le nombre de co-auteurs supplémentaires :<span class="required">*</span></span><input type = "number" name = "nbr_author"/>
-			<label for="fieldBackGround"><span>Choisissez le thème de votre histoire :</span>
-				<input type="radio" name="theme" value="Horror"> Horreur 
-				<input type="radio" name="theme" value="Comedy"> Humour
-				<input type="radio" name="theme" value="Romantic"> Romance
+			<label for="field3"><span>Choissisez le nombre de co-auteurs supplémentaires :<span class="required">*</span></span><input type = "number" name = "nbr_author"/>
 		</fieldset>
 		<fieldset><legend>Informations personnelles</legend>
 			<label for="field4"><span>Adresse e-mail :</span><input type = "text" name = "email">
