--- a/mixtory/app/Resources/views/last_autor.html.twig
+++ b/mixtory/app/Resources/views/last_autor.html.twig
@@ -9,7 +9,7 @@
  {% block body %}
 	 <div class = "form-style-3">
 		 <form method="post" action = "{{ path('site_envoi', {'id' : id}) }}">
-			 <h3>{{title}}</h3>
+			 <h3>{{title}} - Thème : {{theme}}</h3>
 			 <div id="last"><p>Attention vous êtes le dernier auteur !!</p></div>
 			 <div id="pre-text"><article>{{pretext}}</article></div>
 	 	<fieldset><legend>Histoire</legend>
